--- a/src/TechJobs/Views/Job/New.cshtml
+++ b/src/TechJobs/Views/Job/New.cshtml
@@ -15,6 +15,18 @@
     @{ 
         // TODO #5 - Create <select> dropdowns for other job fields (outside of this @{ } block)
     }
+    <div class="form-group">
+        <label asp-for="LocationID"></label>
+        <select asp-for="LocationID" asp-items="Model.Locations"></select>
+    </div>
+    <div class="form-group">
+        <label asp-for="SkillId" ></label>
+        <select asp-for="SkillId" asp-items="Model.CoreCompetencies"></select>
+    </div>
+    <div class="form-group">
+        <label asp-for="PositionTypeID"></label>
+        <select asp-for="PositionTypeID" asp-items="Model.PositionTypes"></select>
+    </div>
 
     <input type="submit" value="Add Job" />
 </form>
